@@ -113,7 +113,7 @@
 	</div>
 	<!-- Loading mask -->
 	<div id="tx_devlog_list_loader">
-		<core:icon identifier="provider-fontawesome-spinner" size="default" />
+		<core:icon identifier="tx_devlog-loader" size="default" />
 	</div>
 	<!-- No entries message -->
 	<div id="tx_devlog_list_empty" class="hidden">
