@@ -41,3 +41,15 @@ if (TYPO3_MODE === 'BE') {
         'LLL:EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang.xlf:test_plugin',
         'EXT:' . $_EXTKEY . '/Resources/Public/Images/ModuleIcon.svg'
 );
+
+// Register sprite icons for loading spinner
+/** @var \TYPO3\CMS\Core\Imaging\IconRegistry $iconRegistry */
+$iconRegistry = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance(\TYPO3\CMS\Core\Imaging\IconRegistry::class);
+$iconRegistry->registerIcon(
+        'tx_devlog-loader',
+        \TYPO3\CMS\Core\Imaging\IconProvider\FontawesomeIconProvider::class,
+        [
+                'name' => 'spinner',
+                'spinning' => true
+        ]
+);
